# eptalights-python

./: .flake8  .readthedocs.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/: api.rst  arrays.rst  callsites.rst  cfg.rst  conf.py  config.rst  cpp_support.rst  dataflow.rst  encoded_php_code.php  fgraph.rst  files.rst  functions.rst  index.rst  java_support.rst  php_support.rst  quickstart.rst  raw.rst  requirements.txt  started.rst  steps.rst  structs.rst  tokenized_operands.rst  variables.rst
src/eptalights/: __init__.py
src/eptalights/core/: api.py  cmdtools.py  db.py  loader.py  printer.py
src/eptalights/models/: __init__.py
src/eptalights/models/basic/: gcc_gimple.py  php_opcode.py
src/eptalights/models/egimple/: callsite.py  cfg.py  config.py  dataflow.py  enum_types.py  file_data.py  file_metadata.py  function.py  function_graph.py  tokenized_operand.py  variable.py
src/eptalights/models/sophia_ir/: dataflow.py  enum_types.py  file_data.py  file_metadata.py  function.py  tokenized_operand.py  variable.py
src/eptalights/printers/: base.py  pseudo_c.py  readable.py
src/eptalights_code/: __init__.py
src/eptalights_code/core/: api.py  cmdtools.py  db.py  loader.py  printer.py
src/eptalights_code/models/: __init__.py
src/eptalights_code/models/sophia_ir/: config.py  dataflow.py  enum_types.py  file_data.py  file_metadata.py  function.py  tokenized_operand.py  variable.py
src/eptalights_code/printers/: pseudo_c.py
src/eptalights_sophia/: __init__.py
src/eptalights_sophia/core/: api.py  cmdtools.py  db.py  loader.py  printer.py
src/eptalights_sophia/models/: __init__.py
src/eptalights_sophia/models/basic/: gcc_gimple.py  jvm_jimple.py
src/eptalights_sophia/models/sophia_ir/: callsite.py  config.py  dataflow.py  enum_types.py  file_data.py  file_metadata.py  function.py  tokenized_operand.py  variable.py
src/eptalights_sophia/printers/: pseudo_c.py
