[build-system]
requires = ["setuptools >= 69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eptalights-sophia-python"
version = "0.0.1"
description = "Eptalights python Library"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "Eptalights Research" }
authors = [ { name = "Eptalights Research", email = "samuelasirifi1@gmail.com" } ]
keywords = [
    "code-analysis",
    "program-analysis",
    "gimple",
    "soot",
    "zend",
    "java",
    "php",
    "C++",
    "sophia_ir",
    "eptalights",
]
dependencies = [
    "pydantic == 2.10.3",
    "cxxfilt == 0.3.0",
    "SQLAlchemy == 2.0.36",
    "msgpack == 1.0.8",
    "Pygments == 2.19.2",
]

[project.urls]
Documentation = "https://eptalights-sophia.readthedocs.io"
Source = "https://github.com/eptalights/sophia-python"

[project.scripts]
sophia_fsearch = "eptalights_sophia.core.cmdtools:search_function"
sophia_decompile_all = "eptalights_sophia.core.cmdtools:decompile_all"

[project.optional-dependencies]
dev = [
    # Running tests and linters
    "black == 24.10.0",
    "flake8 == 7.1.1",
    "pytest == 8.3.3",
]
docs = [
    "Sphinx == 8.1.3",
    "sphinx-book-theme == 1.1.3",
    "sphinx-rtd-theme == 3.0.2",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-vv --durations=0"
testpaths = ["tests"]