[build-system]
requires = ["setuptools >= 69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eptalights-code-python"
version = "0.0.1"
description = "Eptalights Code Analysis Python Library"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { text = "Eptalights Research" }
authors = [ { name = "Eptalights Research", email = "samuelasirifi1@gmail.com" } ]
keywords = [
    "code-analysis",
    "program-analysis",
    "gimple",
    "soot",
    "zend",
    "java",
    "php",
    "C++",
    "eptalights",
    "eptalights_code",
]
dependencies = [
    "pydantic == 2.10.3",
    "cxxfilt == 0.3.0",
    "SQLAlchemy == 2.0.36",
    "msgpack == 1.0.8",
    "Pygments == 2.19.2",
    "xxhash == 3.5.0",
    "dill == 0.4.0",
    "requests == 2.32.5",
    "tabulate == 0.9.0",
]

[project.urls]
Documentation = "https://eptalights-code.readthedocs.io/en/latest/"
Source = "https://github.com/eptalights/eptalights-code-python"

[project.scripts]
eptalights_fsearch = "eptalights_code.core.cmdtools:search_function"
eptalights_decompile_all = "eptalights_code.core.cmdtools:decompile_all"
eptalights_dataflow_list = "eptalights_code.core.cmdtools:dataflow_action_list"
eptalights_dataflow_delete = "eptalights_code.core.cmdtools:dataflow_action_delete"
eptalights_dataflow_update = "eptalights_code.core.cmdtools:dataflow_actions_update"
eptalights_dataflow_clear = "eptalights_code.core.cmdtools:dataflow_actions_clear"

[project.optional-dependencies]
dev = [
    # Running tests and linters
    "black == 24.10.0",
    "flake8 == 7.1.1",
    "pytest == 8.3.3",
]
docs = [
    "Sphinx == 8.1.3",
    "sphinx-book-theme == 1.1.3",
    "sphinx-rtd-theme == 3.0.2",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-vv --durations=0"
testpaths = ["tests"]