[build-system]
requires = ["setuptools >= 69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eptalights"
version = "0.0.1"
description = "Eptalights Code Analysis Python Library is a powerful Python package designed to help hackers, researchers, and developers effortlessly perform code analysis, discover bugs, conduct variant analysis, and leverage advanced AI for deeper program analysis and faster research workflows."
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "Eptalights Research" }
authors = [ { name = "Eptalights Research", email = "samuelasirifi1@gmail.com" } ]
keywords = [
    "code-analysis",
    "program-analysis",
    "gimple",
    "soot",
    "zend",
    "java",
    "php",
    "C++",
    "C",
    "eptalights",
    "dataflow",
    "dataflow analysis",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic == 2.12.5",
    "SQLAlchemy == 2.0.36",
    "msgpack == 1.1.2",
    "Pygments == 2.19.2",
    "dill == 0.4.1",
    "requests == 2.32.5",
    "tabulate == 0.9.0",
]

[project.urls]
Documentation = "https://eptalights.readthedocs.io/en/latest/"
Source = "https://github.com/eptalights/eptalights-python"

[project.scripts]
eptalights_builder = "eptalights.core.cmdtools:builder"
eptalights_downloader = "eptalights.core.cmdtools:downloader"
eptalights_fsearch = "eptalights.core.cmdtools:search_function"
eptalights_decompile_all = "eptalights.core.cmdtools:decompile_all"
eptalights_dataflow_list = "eptalights.core.cmdtools:dataflow_action_list"
eptalights_dataflow_delete = "eptalights.core.cmdtools:dataflow_action_delete"
eptalights_dataflow_update = "eptalights.core.cmdtools:dataflow_actions_update"
eptalights_dataflow_clear = "eptalights.core.cmdtools:dataflow_actions_clear"

[project.optional-dependencies]
dev = [
    # Running tests and linters
    "black",
    "flake8",
    "pytest",
]
docs = [
    "Sphinx",
    "sphinx-book-theme",
    "sphinx-rtd-theme",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools]
zip-safe = false
package-dir = { "" = "src" }

[tool.pytest.ini_options]
addopts = "-vv --durations=0"
testpaths = ["tests"]